# SelectionEarthquake

./: .gitignore  README.md  pyproject.toml  requirements-docs.txt
docs/: generate_api.py  index.md
examples/: Basic01.ipynb  basic_usage.py
src/selection_service/: __init__.py
src/selection_service/core/: Config.py  Pipeline.py
src/selection_service/enums/: Enums.py
src/selection_service/processing/: Mappers.py  Selection.py
src/selection_service/providers/: AfadProvider.py  CacheManager.py  IProvider.py  PeerProvider.py  ProvidersFactory.py
