[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthquake_selection"
version = "1.0.1"
description = "A library for earthquake selection"
readme = "README.md"
authors = [
    {name = "Muhammed Sural", email = "muhammedsural@gmail.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["earthquake", "seismology", "data-processing", "selection", "peer", "nga","afad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scipy>=1.15.3",
    "requests>=2.32.5",
    "aiohttp>=3.12.15",
    "obspy>=1.4.2",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0",        # Config dosyaları için
    "tqdm>=4.65.0",       # Progress bar için
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
    "isort>=5.12.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "twine>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["selection_service*"]
exclude = ["tests*", "examples*","data"]

[tool.setuptools.package-data]
selection_service = [
    "data/*.csv",
    "data/*.xlsx",
    "data/*.json"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[project.urls]
Homepage = "https://github.com/muhammedsural/SELECTIONEARTHQUAKE"
Documentation = "https://muhammedsural.github.io/SELECTIONEARTHQUAKE"
Repository = "https://github.com/muhammedsural/SELECTIONEARTHQUAKE"
Issues = "https://github.com/muhammedsural/SELECTIONEARTHQUAKE/issues"
Changelog = "https://github.com/muhammedsural/SELECTIONEARTHQUAKE/releases"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["selection_service"]
